--- a/Paper/latex/sn-bibliography.bib
+++ b/Paper/latex/sn-bibliography.bib
@@ -5,7 +5,38 @@
 	journal="arXiv preprint arXiv:1706.03762",
 	year="2017"
 }
+@article{Radford2019,
+author = "A. Radford and J. Wu and R. Child and D. Luan and D. Amodei and I. Sutskever and others",
+	title = "Language Models are Unsupervised Multitask Learners",
+	journal = "OpenAI Blog",
+	volume = "1",
+	number = "8",
+	pages = "9",
+	year = "2019"
+}
 
+@inproceedings{Zhang2023,
+	author = "Q. Zhang and S. Chen and D. Xu and Q. Cao and X. Chen and T. Cohn and M. Fang.",
+	title = "A Survey for Efficient Open Domain Question Answering",
+	booktitle = "Proceedings of the 61st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)",
+	editor = "Rogers, A., Boyd Graber, J., Okazaki, N.",
+	pages = "14447--14465",
+	publisher = "Association for Computational Linguistics",
+	address = "Toronto, Canada",
+	month = "Jul",
+	year = "2023",
+	doi = "10.18653/v1/2023.acl-long.808",
+	url = "https://aclanthology.org/2023.acl-long.808"
+}
+@misc{liang2024controllabletextgenerationlarge,
+	title="Controllable Text Generation for Large Language Models A Survey", 
+	author="Xun Liang and Hanyu Wang and Yezhaohui Wang and Shichao Song and Jiawei Yang and Simin Niu and Jie Hu and Dan Liu and Shunyu Yao and Feiyu Xiong and Zhiyu Li",
+	year="2024",
+	eprint="2408.12599",
+	archivePrefix="arXiv",
+	primaryClass="cs.CL",
+	url="https://arxiv.org/abs/2408.1259", 
+}
 @article{naveed2023comprehensive,
 	title="A Comprehensive Overview of Large Language Models",
 	author="Naveed, Humza and Khan, Asad Ullah and Qiu, Shi and Saqib, Muhammad and Anwar, Saeed and Usman, Muhammad and Akhtar, Naveed and Barnes, Nick and Mian, Ajmal",
@@ -19,6 +50,13 @@
 	journal="Advances in Neural Information Processing Systems",
 	volume="33",
 	year="2020"
+}
+@inproceedings{Gu2018SearchEngine,
+author ="Jiatao Gu and Yong Wang and Kyunghyun Cho and Victor OK Li",
+title  = "Search Engine Guided Neural Machine Translation",
+booktitle ="Proceedings of the AAAI Conference on Artificial Intelligence",
+volume = "32",
+year   = "2018"
 }
 
 @article{devlin2018bert,
@@ -97,7 +135,15 @@
 	year      = "2021",
 	publisher = "IEEE"
 }
-
+@misc{sawarkar2024blendedragimprovingrag,
+	title={Blended RAG: Improving RAG (Retriever-Augmented Generation) Accuracy with Semantic Search and Hybrid Query-Based Retrievers}, 
+	author={Kunal Sawarkar and Abhilasha Mangal and Shivam Raj Solanki},
+	year={2024},
+	eprint={2404.07220},
+	archivePrefix={arXiv},
+	primaryClass={cs.IR},
+	url={https://arxiv.org/abs/2404.07220}, 
+}
 @article{lewis2020retrieval,
 	title     = "Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks",
 	author    = "Lewis, Patrick and Perez, Ethan and Piktus, Aleksandra and Petroni, Fabio and Karpukhin, Vladimir and Goyal, Naman and K{\"u}ttler, Heinrich and Lewis, Mike and Yih, Wen-tau and Rockt{\"a}schel, Tim and others",
