--- a/Paper/latex/sn-bibliography.bib
+++ b/Paper/latex/sn-bibliography.bib
@@ -58,7 +58,23 @@ booktitle ="Proceedings of the AAAI Conference on Artificial Intelligence",
 volume = "32",
 year   = "2018"
 }
-
+ @misc{sharma2024rag,
+ 	author = "Rajeev Sharma",
+ 	title = "RAG: How to Connect LLMs to External Sources",
+ 	year = "2024",
+ 	url = "https://markovate.com/blog/connect-llm-using-rag/",
+ 	note = "Last Updated on: November 1, 2024",
+ 	publisher = "Markovate",
+ }
+ @misc{bai2020spartermlearningtermbasedsparse,
+ 	title="SparTerm: Learning Term-based Sparse Representation for Fast Text Retrieval", 
+ 	author="Yang Bai and Xiaoguang Li and Gang Wang and Chaoliang Zhang and Lifeng Shang and Jun Xu and Zhaowei Wang and Fangshan Wang and Qun Liu",
+ 	year= "2020",
+ 	eprint="2010.00768",
+ 	archivePrefix="arXiv",
+ 	primaryClass="cs.IR",
+ 	url="https://arxiv.org/abs/2010.00768", 
+ }
 @article{devlin2018bert,
 	title="BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding",
 	author="Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina",
@@ -136,13 +152,13 @@ year   = "2018"
 	publisher = "IEEE"
 }
 @misc{sawarkar2024blendedragimprovingrag,
-	title={Blended RAG: Improving RAG (Retriever-Augmented Generation) Accuracy with Semantic Search and Hybrid Query-Based Retrievers}, 
-	author={Kunal Sawarkar and Abhilasha Mangal and Shivam Raj Solanki},
-	year={2024},
-	eprint={2404.07220},
-	archivePrefix={arXiv},
-	primaryClass={cs.IR},
-	url={https://arxiv.org/abs/2404.07220}, 
+	title="Blended RAG: Improving RAG (Retriever-Augmented Generation) Accuracy with Semantic Search and Hybrid Query-Based Retrievers", 
+	author="Kunal Sawarkar and Abhilasha Mangal and Shivam Raj Solanki",
+	year="2024",
+	eprint="2404.07220",
+	archivePrefix="arXiv",
+	primaryClass="cs.IR",
+	url="https://arxiv.org/abs/2404.07220", 
 }
 @article{lewis2020retrieval,
 	title     = "Retrieval-Augmented Generation for Knowledge-Intensive NLP Tasks",
@@ -174,19 +190,15 @@ year   = "2018"
 	year      = "2020"
 }
 
-@article{blended_rag2024,
-	author    = "Kunal Sawarkar and Abhilasha Mangal and Shivam Raj Solanki",
-	title     = "Blended RAG: Improving RAG (Retriever-Augmented Generation) Accuracy with Semantic Search and Hybrid Query-Based Retrievers",
-	journal   = "arXiv",
-	volume    = "2404.07220v2",
-	year      = "2024",
-	note      = "[cs.IR]",
-	publisher = "IBM",
-	month     = "August 4",
-	url       = "https://arxiv.org/abs/2404.07220"
+@misc{huang2024surveyretrievalaugmentedtextgeneration,
+	title="A Survey on Retrieval-Augmented Text Generation for Large Language Models", 
+	author="Yizheng Huang and Jimmy Huang",
+	year="2024",
+	eprint="2404.10981",
+	archivePrefix="arXiv",
+	primaryClass="cs.IR",
+	url="https://arxiv.org/abs/2404.10981", 
 }
-
-
 
 @inproceedings{Robertson1997,
 	author    = "S. E. Robertson and S. Walker",
@@ -260,6 +272,7 @@ year   = "2018"
 	isbn      = "978-1-4673-2317-8",
 	note      = "Date Added to IEEE Xplore: 17 September 2012",
 }
+
 @article{Zhu2024,
 	author    = "Chencheng Zhu and Tomoki Taniguchi and Kazutaka Shimada and Tomoko Ohkuma",
 	title     = "STAYKATE: Hybrid In-Context Example Selection Combining Representativeness Sampling and Retrieval-based Approach - A Case Study on Science Domains",
@@ -391,6 +404,15 @@ year   = "2018"
 	publisher = "Association for Computing Machinery",
 	address   = "New York, NY, USA"
 }
+@article{aher2023evaluation,
+	title="Evaluation Metrics for Recommendation Systems – An Overview",
+	author="Aher, Pratik",
+	journal="Towards Data Science",
+	year="2023",
+	month="August 9",
+
+}
+
 =========================================================================%%
 %% while using chicago reference style, both abbreviated and expanded form of %%
 %% author name format is acceptable. Refer below example for expanded form    %%
