--- a/Paper/latex/sn-bibliography.bib
+++ b/Paper/latex/sn-bibliography.bib
@@ -1,9 +1,12 @@
 %% Journal article
-@article{vaswani2017attention,
-	title="Attention is All You Need",
-	author="Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia",
-	journal="arXiv preprint arXiv:1706.03762",
-	year="2017"
+@misc{vaswani2017attention,
+	title={Attention Is All You Need}, 
+	author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
+	year={2023},
+	eprint={1706.03762},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL},
+	url={https://arxiv.org/abs/1706.03762}, 
 }
 @article{Radford2019,
 author = "A. Radford and J. Wu and R. Child and D. Luan and D. Amodei and I. Sutskever and others",
@@ -29,13 +32,13 @@ author = "A. Radford and J. Wu and R. Child and D. Luan and D. Amodei and I. Sut
 	url = "https://aclanthology.org/2023.acl-long.808"
 }
 @misc{liang2024controllabletextgenerationlarge,
-	title="Controllable Text Generation for Large Language Models A Survey", 
-	author="Xun Liang and Hanyu Wang and Yezhaohui Wang and Shichao Song and Jiawei Yang and Simin Niu and Jie Hu and Dan Liu and Shunyu Yao and Feiyu Xiong and Zhiyu Li",
-	year="2024",
-	eprint="2408.12599",
-	archivePrefix="arXiv",
-	primaryClass="cs.CL",
-	url="https://arxiv.org/abs/2408.1259", 
+	title={Controllable Text Generation for Large Language Models: A Survey}, 
+	author={Xun Liang and Hanyu Wang and Yezhaohui Wang and Shichao Song and Jiawei Yang and Simin Niu and Jie Hu and Dan Liu and Shunyu Yao and Feiyu Xiong and Zhiyu Li},
+	year={2024},
+	eprint={2408.12599},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL},
+	url={https://arxiv.org/abs/2408.12599}, 
 }
 @article{naveed2023comprehensive,
 	title="A Comprehensive Overview of Large Language Models",
@@ -75,13 +78,24 @@ year   = "2018"
  	primaryClass="cs.IR",
  	url="https://arxiv.org/abs/2010.00768", 
  }
-@article{devlin2018bert,
-	title="BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding",
-	author="Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina",
-	journal="arXiv preprint arXiv:1810.04805",
-	year="2018"
-}
-
+@inproceedings{devlin2018bert,
+	title = "{BERT}: Pre-training of Deep Bidirectional Transformers for Language Understanding",
+	author = "Devlin, Jacob  and
+	Chang, Ming-Wei  and
+	Lee, Kenton  and
+	Toutanova, Kristina",
+	editor = "Burstein, Jill  and
+	Doran, Christy  and
+	Solorio, Thamar",
+	booktitle = "Proceedings of the 2019 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long and Short Papers)",
+	month = jun,
+	year = "2019",
+	address = "Minneapolis, Minnesota",
+	publisher = "Association for Computational Linguistics",
+	url = "https://aclanthology.org/N19-1423/",
+	doi = "10.18653/v1/N19-1423",
+	pages = "4171--4186",}
+	
 @article{raffel2020exploring,
 	title = "Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer",
 	author = "Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J",
@@ -103,15 +117,15 @@ year   = "2018"
 	year = "2023",
 	doi = "10.1145/3571730"
 }
-@inproceedings{kandpal2023large,
-	title = "Large Language Models Struggle to Learn Long-Tail Knowledge",
-	author = "N. Kandpal and H. Deng and A. Roberts and E. Wallace and C. Raffel",
-	booktitle = "International Conference on Machine Learning",
-	year = "2023",
-	pages = "15696--15707",
-	publisher = "PMLR"
+@misc{kandpal2023large,
+	title={Large Language Models Struggle to Learn Long-Tail Knowledge}, 
+	author={Nikhil Kandpal and Haikang Deng and Adam Roberts and Eric Wallace and Colin Raffel},
+	year={2023},
+	eprint={2211.08411},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL},
+	url={https://arxiv.org/abs/2211.08411}, 
 }
-
 @article{bender2021dangers,
 	title = "On the Dangers of Stochastic Parrots: Can Language Models Be Too Big?",
 	author = "E. M. Bender and T. Gebru and A. McMillan-Major and S. Shmitchell",
@@ -121,15 +135,15 @@ year   = "2018"
 	doi = "10.1145/3442188.3445922"
 }
 %% Journal article
-@article{Mousavi2025,
-	author    = "Seyed Mahed Mousavi and Simone Alghisi and Giuseppe Riccardi",
-	title     = "LLMs as Repositories of Factual Knowledge: Limitations and Solutions",
-	journal   = "arXiv preprint",
-	volume    = "arXiv:2501.12774v1",
-	year      = "2025",
-	month     = "Jan",
-	url       = "https://arxiv.org/abs/2501.12774v1"
 
+@misc{Mousavi2025,
+	title={LLMs as Repositories of Factual Knowledge: Limitations and Solutions}, 
+	author={Seyed Mahed Mousavi and Simone Alghisi and Giuseppe Riccardi},
+	year={2025},
+	eprint={2501.12774},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL},
+	url={https://arxiv.org/abs/2501.12774}, 
 }
 
 @article{Howard2018,
@@ -168,13 +182,13 @@ year   = "2018"
 	pages     = "9459--9474",
 	year      = "2020"
 }
-
 @article{yuan2024hybrid,
-	title="A Hybrid RAG System with Comprehensive Enhancement on Complex Reasoning",
-	author="Ye Yuan and Chengwu Liu and Jingyang Yuan and Gongbo Sun and Siqi Li and Ming Zhang",
-	journal="arXiv preprint arXiv:2408.05141",
-	year="2024",
-	url="https://arxiv.org/abs/2408.05141"
+	title={A Hybrid RAG System with Comprehensive Enhancement on Complex Reasoning},
+	author={Ye Yuan and Chengwu Liu and Jingyang Yuan and Gongbo Sun and Siqi Li and Ming Zhang},
+	journal={ArXiv},
+	year={2024},
+	volume={abs/2408.05141},
+	url={https://api.semanticscholar.org/CorpusID:271843432}
 }
 
 
@@ -228,17 +242,18 @@ year   = "2018"
 }
 
 @inproceedings{Lafferty2001,
-	author    = "J. D. Lafferty and C. Zhai",
-	title     = "Document language models, query models, and risk minimization for information retrieval",
-	booktitle = "SIGIR 2001: Proceedings of the 24th Annual International ACM SIGIR Conference on Research and Development in Information Retrieval",
-	year      = "2001",
-	editor    = "W. B. Croft and D. J. Harper and D. H. Kraft and J. Zobel",
-	pages     = "167--174",
-	address   = "New Orleans, Louisiana, USA",
-	month     = "September 9-13",
-	publisher = "ACM",
-	doi       = "10.1145/383952.383979",
-	url       = "https://doi.org/10.1145/383952.383979",
+author = {Lafferty, John and Zhai, Chengxiang},
+title = {Document language models, query models, and risk minimization for information retrieval},
+year = {2001},
+isbn = {1581133316},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/383952.383970},
+doi = {10.1145/383952.383970},
+pages = {111–119},
+numpages = {9},
+location = {New Orleans, Louisiana, USA},
+series = {SIGIR '01}
 }
 @inproceedings{Culpepper2016,
 	author    = "J. Shane Culpepper and Charles L. A. Clarke and Jimmy Lin",
